--- a/app/scripts/components/statisticDropdown/index.html
+++ b/app/scripts/components/statisticDropdown/index.html
@@ -1,18 +1,18 @@
 <div class="statistic-dropdown dropdown">
   <div class="dropdown-toggle__wrapper header__link">
-    <a href class="dropdown-toggle">
+    <a class="dropdown-toggle">
       Tunnusluvut
     </a>
   </div>
   <div class="dropdown-menu-container">
     <ul class="dropdown-menu">
       <li>
-        <a href="#/y/tunnuslukujensyottaminen">
+        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.syottaminen()">
           Tunnuslukujen syöttäminen
         </a>
       </li>
       <li>
-        <a href="#/y/tunnuslukuraportit">
+        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.raportit()">
           Tunnuslukuraportit
         </a>
       </li>
