--- a/app/scripts/components/table/index.styl
+++ b/app/scripts/components/table/index.styl
@@ -2,6 +2,9 @@
   &>thead>tr>th,
   &>tbody>tr>td
     padding 0.8em 0.4em
+    vertical-align middle
+    .form-group
+      margin 0
   &>thead>tr>th
     padding-top 1em
   &>thead>tr
