LIVIJUKU-357 Selainten pop-up blockerit estävät/hankaloittavat PDF-tiedostojen lataamista/katsomista --> PDF.js käyttöön?

--- a/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
@@ -10,7 +10,7 @@
             <p class="hakemuskausi-vuosi">{{hakemuskausi.vuosi}}</p>
 
             <p ng-show="hakemuskausi.hakuohjeLadattu || !hakemuskausi.uusi">
-              <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" target="_blank">Hakuohje</a>
+              <a href="/pdf/web/viewer.html?file=/api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" target="_blank">Hakuohje</a>
             </p>
 
             <p ng-show="hakemuskausi.uusi">
