--- a/app/scripts/views/kasittelija/paatos.html
+++ b/app/scripts/views/kasittelija/paatos.html
@@ -36,7 +36,7 @@
       <div class="col-md-4">
         <label>Diaarinumero</label>
 
-        <p><a href="/pdf/web/viewer.html?file=/api/hakemus/{{avustushakemus.id}}/pdf" target="_blank"><span
+        <p><a href="{{haeHakemusPdf()}}" target="_blank"><span
           class="glyphicon glyphicon-file"></span>{{avustushakemus.diaarinumero}}</a></p>
       </div>
     </div>
