--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -45,7 +45,7 @@
   <div class="row" ng-show="hasPaatos(hakemus.hakemustilatunnus)">
     <div class="col-md-12">
       <p>
-        <a href="/pdf/web/viewer.html?file=/api/hakemus/{{hakemusid}}/paatos/pdf" target="_blank"><span
+        <a href="{{haePaatosPdf()}}"  target="_blank"><span
           class="glyphicon glyphicon-file"></span>
           Avaa päätös (PDF)</a>
         <a href="resources/OIKAISUVAATIMUSOSOITUS.docx" target="_blank"><span
