LIVIJUKU-368 Tunnuslukuraportointi tekninen demo

--- a/app/scripts/components/statisticDropdown/index.html
+++ b/app/scripts/components/statisticDropdown/index.html
@@ -7,12 +7,12 @@
   <div class="dropdown-menu-container">
     <ul class="dropdown-menu">
       <li>
-        <a href="#/h/tunnuslukujensyottaminen">
+        <a href="#/y/tunnuslukujensyottaminen">
           Tunnuslukujen syöttäminen
         </a>
       </li>
       <li>
-        <a href="#/h/tunnuslukuraportit">
+        <a href="#/y/tunnuslukuraportit">
           Tunnuslukuraportit
         </a>
       </li>
